--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="//cdn.jsdelivr.net/jsbarcode/3.3.20/JsBarcode.all.min.js"></script>
-    <script src="js/script.js"></script>
+    <script type="module" src="js/js.cookie.min.js"></script>
+  <script type="module">
+    import Cookies from './js/js.cookie.mjs'
+  </script>
+    <script type="module" src="js/script.js"></script>
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <!--  Real-time barcode generator. Powered by <a href="https://github.com/lindell/JsBarcode">JsBarcode</a>-->
   </head>
@@ -39,7 +44,7 @@
           <div class="col-md-10 col-md-offset-1">
             <div class="input-group margin-bottom-sm">
               <span class="input-group-addon"><i class="fa fa-barcode fa-fw"></i></span>
-              <input class="form-control" id="userInput" type="text" value="2500000000" placeholder="Barcode" autofocus>
+              <input class="form-control" id="userInput" type="text" placeholder="Barcode" autofocus>
             </div>
           </div>
         </div>
