--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
 
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type='text/css' href="style.css">
 
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="//cdn.jsdelivr.net/jsbarcode/3.3.20/JsBarcode.all.min.js"></script>
-    <script type="module" src="js/js.cookie.min.js"></script>
+    <script type="text/javascript"  src="//cdn.jsdelivr.net/jsbarcode/3.3.20/JsBarcode.all.min.js"></script>
+    <script type="module" type="text/javascript"  src="js/js.cookie.min.js"></script>
   <script type="module">
-    import Cookies from './js/js.cookie.mjs'
+    import Cookies from './js/js.cookie.min.js'
   </script>
     <script type="module" src="js/script.js"></script>
 
@@ -44,7 +44,7 @@
           <div class="col-md-10 col-md-offset-1">
             <div class="input-group margin-bottom-sm">
               <span class="input-group-addon"><i class="fa fa-barcode fa-fw"></i></span>
-              <input class="form-control" id="userInput" type="text" placeholder="Barcode" autofocus>
+              <input class="form-control" id="userInput" type="text" placeholder="Barcode" autofocus maxlength="11">
             </div>
           </div>
         </div>
