--- a/index.html
+++ b/index.html
@@ -1,81 +1,69 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-  <head>
-    <meta charset="UTF-8">
-    <title>Tampere University Library | Library Card</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
+<head>
+  <meta charset="UTF-8">
+  <title>JS Library Card</title>
 
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type='text/css' href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
 
-    <script src="js/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript"  src="js/JsBarcode.all.min.js"></script>
-    <script type="module" type="text/javascript"  src="js/js.cookie.min.js"></script>
+  <link href="css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+  <link rel="stylesheet" type='text/css' href="css/style.css">
+
+  <script src="js/jquery-2.1.3.min.js"></script>
+  <script type="text/javascript" src="js/JsBarcode.all.min.js"></script>
+  <script type="module" type="text/javascript" src="js/js.cookie.min.js"></script>
   <script type="module">
     import Cookies from './js/js.cookie.min.js'
   </script>
-    <script type="module" src="js/script.js"></script>
+  <script type="module" src="js/script.js"></script>
 
-    <script src="js/bootstrap.min.js"></script>
-   
-<script>
-  var _paq = window._paq = window._paq || [];
-  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="https://tuni-library.matomo.cloud/";
-    _paq.push(['setTrackerUrl', u+'matomo.php']);
-    _paq.push(['setSiteId', '3']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.async=true; g.src='//cdn.matomo.cloud/tuni-library.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
+  <script src="js/bootstrap.min.js"></script>
 
+</head>
 
-  </head>
-  <body>
-    <div id="head">
+<body>
+  <div id="head">
     <div class="container">
-    <div class="col-md-10">
-    <div id="title">
-      <h1>TUNI Library Card</h1>
-    </div>
-    </div>
-    </div>
-    </div>
-    <div id="main">
-      <div class="barcode-container">
-        <svg id="barcode"></svg>
-        <span id="invalid">Check your barcode, it is not valid.</span>
+      <div class="col-md-10">
+        <div id="title">
+          <h1>JS Library Card</h1>
+        </div>
       </div>
     </div>
-    <div id="input-bar">
+  </div>
+  <div id="main">
+    <div class="barcode-container">
+      <svg id="barcode"></svg>
+      <span id="invalid">Check your barcode, it is not valid.</span>
+    </div>
+  </div>
+  <div id="input-bar">
     <div class="container">
-        <div class="row search-bar">
-          <div class="col-md-10 col-md-offset-1">
-            <div class="input-group margin-bottom-sm">
-              <span class="input-group-addon"><i class="fa fa-barcode fa-fw"></i></span>
-              <input class="form-control" id="userInput" type="text" placeholder="Barcode" autofocus maxlength="11">
+      <div class="row search-bar">
+        <div class="col-md-10 col-md-offset-1">
+          <div class="input-group margin-bottom-sm">
+            <span class="input-group-addon"><i class="fa fa-barcode fa-fw"></i></span>
+            <input class="form-control" id="userInput" type="text" placeholder="Barcode" autofocus maxlength="11">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-6 col-lg-6 text-center text-lg-left margin-top-md">
+            <div class="credit-text">
+              <p>Based on <a href="https://github.com/lindell/JsBarcode">JsBarcode</a< /p>
             </div>
           </div>
         </div>
-	</div>
       </div>
-    <div>
-  <footer>
-  <div class="container">  
-                <div class="row">  
-                    <div class="col-xl-6 col-lg-6 text-center text-lg-left margin-top-md">  
-                        <div class="credit-text">  
-                            <p>Based on <a href="https://github.com/lindell/JsBarcode">JsBarcode</a</p>  
-                        </div>  
-                    </div>
-  </div>
-</div>  
-  </footer>	
-  </body>
+    </footer>
+</body>
+
 </html>
